feat(domain) add some features into phonetec-dashboard Ref: #main
